Fix alignment

--- a/resources/assets/sass/modules/_blog-post-preview.sass
+++ b/resources/assets/sass/modules/_blog-post-preview.sass
@@ -1,6 +1,9 @@
 .blog__post-preview
 	margin-bottom: 50px
 
+	&:last-of-type
+		margin-right: 0
+
 	&.appear
 		display: inline-block !important
 		animation: fadeIn 1s ease
