--- a/resources/assets/sass/modules/_work-preview.sass
+++ b/resources/assets/sass/modules/_work-preview.sass
@@ -2,6 +2,9 @@
 	text-align: center
 	margin-bottom: 50px
 
+	&:last-of-type
+		margin-right: 0
+
 	&.whitebg
 		.work-preview__heading
 			color: $darkGray
